argo_events/loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: github-lb
spec:
  selector:
      app: test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 12000
  type: LoadBalancer
